# therapy-bot

./: .gitignore  README.md  pyproject.toml
backend/: pyproject.toml
backend/src/: models.py  prompts.py
backend/src/services/: calendar.py  qdrant.py
frontend/: main.py  pyproject.toml
src/: app.py  graph.py
